--- a/overlay/frameworks/base/core/res/res/values-mcc311-mnc480/config.xml
+++ b/overlay/frameworks/base/core/res/res/values-mcc311-mnc480/config.xml
@@ -23,6 +23,12 @@
      <string-array translatable="false" name="config_default_vm_number">
         <item>*86</item>
     </string-array>
+
+    <!-- Flag specifying whether VoLTE should be available for carrier: independent of
+         carrier provisioning. If false: hard disabled. If true: then depends on carrier
+         provisioning, availability etc -->
+    <bool name="config_carrier_volte_available">true</bool>
+
     <!-- If Voice Radio Technology is RIL_RADIO_TECHNOLOGY_LTE:14 this is the Values
          that should be used instead. A value of RIL_RADIO_TECHNOLOGY_UNKNOWN:0 means29
          there is no replacement value and VoLTE is assumed to be supported -->
